src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */

@media screen and (min-width: 966px) { /* desktop */
}
@media screen and (max-width: 966px) { /* mobile/tablet all */
}
@media screen and (max-width: 768px) { /* mobile medium (/tablet) */
}
@media screen and (max-width: 480px) { /* mobile small */
}

/**
 * Any CSS included here will be global.
 */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');

/* Override the default Infima variables here. */
:root {
  --ifm-color-primary: white;
  --ifm-color-primary-dark: rgb(235, 235, 235);
  --ifm-color-primary-darker: rgb(225, 225, 225);
  --ifm-color-primary-darkest: rgb(215, 215, 215);
  --ifm-color-primary-light: rgb(215, 215, 215);
  --ifm-color-primary-lighter: rgb(225, 225, 225);
  --ifm-color-primary-lightest: rgb(235, 235, 235);
  --ifm-font-color-base: #333;
  --ifm-font-color-light: #666;
  --ifm-font-color-base-inverse: white;
  --ifm-heading-color: black;
  --ifm-heading-font-weight: normal;
  --ifm-hero-text-color: black;
  --ifm-hero-background-color: transparent;
  --ifm-container-width: 966px;
  --ifm-link-color: #008FDB;
  --ifm-link-hover-color: #06A5FA;
  --ifm-navbar-link-hover-color: #06A5FA;
  --ifm-menu-color-active: #008FDB;
  --ifm-menu-color-background-active: rgba(171, 233, 254, 0.1);
  --ifm-footer-background-color: white;
  --ifm-footer-color: black;
  --ifm-footer-link-hover-color: black;
  --ifm-footer-padding-vertical: 20px;
  --ifm-h1-font-size: 18px;
  --ifm-line-height-base: 150%;
  --ifm-global-shadow-lw: 0px 2px 0px rgba(70, 76, 92, 0.25);
  --ifm-navbar-height: 80px; /* Fixes issue with internal links hiding under navbar */
  --ifm-alert-padding-vertical: 20px;
  --ifm-alert-padding-horizontal: 20px;
  --ifm-card-border-radius: 4px;
  --ifm-card-vertical-spacing: 32px;
  --ifm-code-font-size: 14px;
  --ifm-font-family-monospace: 'Roboto Mono';
  font-family: 'Roboto', 'Bungee', sans-serif;

  /* --ifm-color-emphasis-200: #ABE9FE; */

  --obj-primary-one: #008FDB;
  --obj-primary-two: rgba(171, 233, 254, 0.1);
  --obj-primary-three: rgba(196, 166, 252, 0.1);
  --obj-primary-four: rgba(254, 242, 132, 0.1);
}

:root {
  --doc-sidebar-width: 360px !important;
}

body {
  line-height: 150%;
}

/* Top navigation */
.navbar {
  border-bottom: 1px solid #C4C4C4;
  box-shadow: none;
  height: 80px;
  padding: 8px 16px;
  z-index: 1001;
}
.navbar__link {
  font-weight: normal;
  font-size: 16px;
  line-height: 150%;
  padding-right: 24px;
}
@media (max-width: 996px) {
  .navbar-sidebar .navbar__item {
    display: block;
  }
}
@media (min-width: 960px) {
  .navbar {
    z-index: 999; /* so announcement bar can overlap it*/
  }
  .navbar .navItem {
    width: 24px;
    height: 24px;
    padding: 0 24px;
    font-size: 0;
    color: transparent; 
  }
  .navbar .navItem span, .navbar .navItem svg {
    display: none;
  }
  .navbar .navGitHub {
    background: url('/img/icons/icon-nav-github.svg') no-repeat;
  }
  .navbar .navGitHub:hover {
    background: url('/img/icons/icon-nav-github-hover.svg') no-repeat;
  }
  .navbar .navSlack {
    background: url('/img/icons/icon-nav-slack.svg') no-repeat;
    color: transparent; 
  }
  .navbar .navSlack:hover {
    background: url('/img/icons/icon-nav-slack-hover.svg') no-repeat;
  }
  .navbar .navTwitter {
    background: url('/img/icons/icon-nav-twitter.svg') no-repeat;
  }
  .navbar .navTwitter:hover {
    background: url('/img/icons/icon-nav-twitter-hover.svg') no-repeat;
  }
  .navbar .navEmail {
    background: url('/img/icons/icon-nav-email.svg') no-repeat;
  }
  .navbar .navEmail:hover {
    background: url('/img/icons/icon-nav-email-hover.svg') no-repeat;
  }
}

/* Content */
@media (min-width: 1440px) {
  /* fix: Docusaurus builds set container max-width to var(--ifm-container-width-xl) on large screens */
  .container {
    max-width: 996px !important;
  }
}

/* Footer */
.footer {
  padding: 10px;
  text-align: center;
}

@media (min-width: 1440px) {
  .footer .container {
    max-width: 960px;
  }
}

.footer__item {
  display: inline-block;
  margin: 0 10px;
  font-size: 0.8em;
}

.footer__copyright {
  font-size: 0.9em;
  color: rgb(100, 100, 100);
}

/* General styles like <h> tags */
h1, h2, h3, h4, h5, h6 {
  font-family: 'Roboto', serif;
  font-style: normal;
  font-weight: normal;
  line-height: 150%;
  margin: 16px 0;
}

h1 {
  font-size: 32px;
  font-weight: 700;
}

h2 {
  font-size: 24px;
  font-weight: 700;
}

h3 {
  font-size: 18px;
  font-weight: 700;
}

h4 {
  font-size: 16px;
  font-weight: 700;
}

h5 {
  font-size: 14px;
  letter-spacing: 0.1em;
}

p, .markdown p {
  margin-bottom: 16px;
}

.button {
  --ifm-button-background-color: white;
  --ifm-button-border-color: black;  
  color: black;
}
.button:hover {
  --ifm-button-border-color: #ffffffd4;
  color: #ffffffd4;
}

/* Tweets */
.twitter-tweet {
  margin: 40px auto !important;
}

/* BLOG */
.blog-wrapper .main-wrapper {
  line-height: 2em;
  letter-spacing: -0.003em;
  margin-top: 40px;
}

.blog-wrapper .main-wrapper header a {
  color: var(--ifm-font-color-base);
}

.blog-wrapper .main-wrapper footer {
  padding: 0;
  text-align: left;
  background-color: #fff;
  color: var(--ifm-font-color-base);
}

.blog-list-page article {
  padding-bottom: 20px;
  border-bottom: 1px solid rgba(229,231,235,1);
}

.blog-list-page article header h2 {
  margin: 0;
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}
.blog-list-page article h3 {
  font-family: "Georgia", serif;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  color: var(--ifm-font-color-light);
}

.blog-list-page article header h2 a {
  font-size: 24px;
  line-height: 36px;
  color: var(--ifm-font-color-base);
  font-weight: 900;
}

/* Remove ToC from a blog post and stretch article width */
.blog-post-page .row .col--9 {
  --ifm-col-width: 100%;
  margin-left: 0;
}
.blog-post-page .row .col--2 {
  --ifm-col-width: 0;
  display: none;
}
.blog-post-page article {
  margin: 0 auto;
  width: 90%;
  max-width: 700px;
}

.blog-post-page article header h1 {
  margin: 0;
  font-weight: 700;
}
@media screen and (max-width: 768px) { /* mobile medium (/tablet) */
  .blog-post-page article header h1 {
    font-size: 32px;
    margin-bottom: 10px;
  }
}

.blog-post-page article header {
  font-family: "Georgia", serif;
  line-height: 36px;
}

.blog-post-page article header .avatar__name, .blog-post-page article header .avatar__subtitle {
  margin-top: -5px;
}
.blog-post-page article header .avatar__subtitle {
  margin-top: -10px;
}

.blog-post-page article intro, 
.blog-post-page article p, 
.blog-post-page article ol, 
.blog-post-page article ul, 
.blog-post-page article a {
  font-family: "Georgia", serif;
  font-size: 20px;
  line-height: 36px;
  --ifm-font-color-base: #333;
}

.blog-list-page article intro, .blog-post-page article intro {
  font-style: italic;
}

.blog-post-page article h2 {
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}

.blog-post-page article h3 {
  font-size: 20px;
  line-height: 36px;
  color: var(--ifm-font-color-light);
  font-weight: 400;
}

.blog-list-page article header .margin-vert--md, .blog-post-page article header .margin-vert--md { /* blog post date */
  margin-top: 0 !important;
  color:rgb(100, 100, 100);
}

.blog-list-page article footer .text--right, .blog-list-page article footer .text--right a { /* read more */
  color: var(--ifm-font-color-base);
}
.blog-list-page article footer .text--right a:after {
  content: " \2192";
  font-weight: bold;
}

.pagination-nav__link {
  border: none;
}
.pagination-nav__link:hover {
  color: var(--ifm-font-color-base);
}

/** DIAGRAM (MERMAID) MARKUP **/

.mermaid {
  text-align: center;
}
/* Fixes large margins top and bottom */
.mermaid svg {
  height: auto;
}

.diagram-caption {
  font-style: italic;
  font-size: 0.8em;
  text-align: center;
}

 /* HACK: use '!important' as a workaround for styling not being applied to nodes: 
  https://github.com/mermaid-js/mermaid/issues/1649 */
.diagram-basic rect {
  fill: #fff !important;
  stroke: black !important;
}
.hover .diagram-basic rect, .diagram-basic .hover rect {
  fill: rgb(212, 212, 212) !important;
}  
.diagram-blue rect {
  fill: #EAF9FE !important;
  stroke: #64C8FA !important;
}
.hover .diagram-blue rect, .diagram-blue .hover rect {
  fill: #ABE9FE !important;
  stroke: #006496 !important;
}
.diagramActive rect {
  fill: #ABE9FE !important;
  stroke: #006496 !important;
}
.diagram-pink rect {
  fill: #fba99dff !important;
  stroke: rgb(200, 50, 25) !important;
}
.hover .diagram-pink rect, .diagram-pink .hover rect {
  fill: rgb(255, 150, 125) !important;
  stroke: rgb(200, 50, 25) !important;
}
.diagram-yellow rect {
  fill: #fef284ff !important;
  stroke: rgb(150, 133, 0) !important;
}
.hover .diagram-yellow rect, .diagram-yellow .hover rect {
  fill: rgb(255, 243, 81) !important;
}
.mermaid .edgeLabel {
  background-color: rgb(200, 200, 200) !important;
}
.mermaid .edgeLabel rect {
  fill: rgb(200, 200, 200) !important;
  stroke: none !important;
}

/** LIGHTBOX MARKUP **/
/* animation */

@keyframes anvil {
  0% {
    transform: scale(1) translateY(0px);
    opacity: 0;
    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
  }
  1% {
    transform: scale(0.96) translateY(10px);
    opacity: 0;
    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
  }
  100% {
    transform: scale(1) translateY(0px);
    opacity: 1;
    box-shadow: 0 0 500px rgba(241, 241, 241, 0);
  }
}

